Modified CSS to correctly display serverfile pages on smaller devices.

--- a/bootstrap/css/custom.css
+++ b/bootstrap/css/custom.css
@@ -14,6 +14,11 @@ html body
 	float: none;
 }
 
+input
+{
+	width: 100%;
+}
+
 .btn
 {
 	margin: 2px;
